--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,6 +5,7 @@
 @import 'search';
 @import 'home';
 @import 'ProductCard';
+@import 'modals';
 
 @import 'contacts';
 
@@ -38,6 +39,10 @@ body {
   font-size: 14px;
   line-height: 1.8;
   background: white;
+
+  .jGrowl.top-right {
+    margin-right: var(--removed-body-scroll-bar-size, 0);
+  }
 }
 
 .container {
@@ -55,6 +60,69 @@ body {
   height: auto;
   flex-shrink: 0;
 }
+
+.button-primary {
+  background: #efde00;
+  color: #383838;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4px;
+  height: 44px;
+  padding: 0 24px;
+  border-radius: 4px;
+  border: none;
+  box-sizing: border-box;
+  cursor: pointer;
+  font-size: 16px;
+  @include --hover {
+    background: #eed20e;
+    color: #000;
+  }
+}
+
+.button-outline {
+  background: transparent;
+  border: 2px solid #e3e3e3;
+  color: #333;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4px;
+  text-decoration: none;
+  height: 44px;
+  padding: 0 24px;
+  border-radius: 4px;
+  box-sizing: border-box;
+  cursor: pointer;
+  font-size: 16px;
+  @include --hover {
+    background: #e3e3e3;
+    color: #000;
+  }
+}
+
+.button-link {
+  background: transparent;
+  color: #383838;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4px;
+  height: 44px;
+  padding: 0 24px;
+  border-radius: 4px;
+  border: none;
+  box-sizing: border-box;
+  cursor: pointer;
+  font-size: 16px;
+  @include --hover {
+    background: #f4f4f4;
+    color: #000;
+  }
+}
+
+//* -- - - -- -- - - - *//
 
 h6 {
   display: inline-block;
@@ -393,14 +461,6 @@ h6 {
   }
 }
 
-.button-link {
-  padding: 0;
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-  text-decoration: underline;
-}
-
 .button-danger {
   color: #fff;
   font-size: 19px;
@@ -417,25 +477,6 @@ h6 {
   &:hover {
     color: #fff;
     background-color: #d00306;
-  }
-}
-
-.button-primary {
-  color: #fff;
-  font-size: 19px;
-  background: #196e8b;
-  box-shadow: 1px 1px 3px rgba(56, 53, 50, 0.86);
-  border-radius: 4px;
-  border: 0;
-  line-height: 36px;
-  padding: 0 20px;
-  box-sizing: border-box;
-  font-family: inherit;
-  text-shadow: none;
-  opacity: 1 !important;
-  &:hover {
-    color: #fff;
-    background-color: #004d67;
   }
 }
 
@@ -3563,132 +3604,6 @@ jdiv {
     }*/
 }
 
-.product-options {
-  overflow: hidden;
-  border-top: 3px solid rgba(204, 204, 204, 0.2);
-  border-bottom: 3px solid rgba(204, 204, 204, 0.2);
-  td {
-    padding: 8px 0;
-  }
-  table {
-    width: 100%;
-  }
-}
-.product-options__float {
-  float: right;
-  min-width: 288px;
-  @media (max-width: $breakpoint-small-max) {
-    float: none;
-  }
-}
-.product-add-wrap {
-  max-width: 216px;
-  min-width: 200px;
-}
-.product-options__label {
-  font-size: 12px;
-  line-height: 38px;
-  padding-right: 5px;
-}
-.product-options__item {
-  float: left;
-  margin-right: 1px;
-  input {
-    display: none;
-  }
-  label {
-  }
-  span {
-    cursor: pointer;
-    display: block;
-    border-radius: 4px;
-    background-color: #ffffff;
-    min-width: 40px;
-    padding: 0 5px;
-    height: 40px;
-    border: 2px solid #cccccc;
-    color: #333333;
-    font-size: 14px;
-    font-weight: 700;
-    line-height: 38px;
-    text-align: center;
-    position: relative;
-    &._option-krasnyy,
-    &._option-siniy,
-    &._option-chernyy,
-    &._option-belyy,
-    &._option-rozovyy,
-    &._option-zheltyy,
-    &._option-seryy,
-    &._option-zelenyy,
-    &._option-fioletovyy,
-    &._option-korichnevyy,
-    &._option-goluboy,
-    &._option-goluboy,
-    &._option-oranzhevyy {
-      &:before {
-        content: '';
-        border-radius: 4px;
-        display: block;
-        position: absolute;
-        left: 2px;
-        top: 2px;
-        width: 32px;
-        height: 32px;
-      }
-      text-indent: -9999px;
-    }
-    &._option-krasnyy:before {
-      background-color: red;
-    }
-    &._option-siniy:before {
-      background-color: blue;
-    }
-    &._option-chernyy:before {
-      background-color: black;
-    }
-    &._option-belyy:before {
-      background-color: white;
-    }
-    &._option-rozovyy:before {
-      background-color: #ffc0cb;
-    }
-    &._option-zheltyy:before {
-      background-color: #ffff00;
-    }
-    &._option-seryy:before {
-      background-color: #808080;
-    }
-    &._option-zelenyy:before {
-      background-color: #008000;
-    }
-    &._option-fioletovyy:before {
-      background-color: #8b00ff;
-    }
-    &._option-korichnevyy:before {
-      background-color: #964b00;
-    }
-    &._option-goluboy:before {
-      background-color: #00bfff;
-    }
-    &._option-goluboy:before {
-      background-color: #00bfff;
-    }
-    &._option-oranzhevyy:before {
-      background-color: #ffa500;
-    }
-    &:hover {
-      background-color: #3fa5b6;
-      color: #fff;
-    }
-  }
-  input:checked + span {
-    background-color: #5ba3b7;
-    border-color: #5ba3b7;
-    color: #ffffff;
-    text-shadow: 0px -1px 1px rgba(0, 0, 0, 0.6);
-  }
-}
 .product-after {
   border: 1px solid #000;
   border-radius: 5px;
