--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -14,6 +14,7 @@ body:has(.header) {
     top: 0;
     left: 0;
     right: 0;
+    margin-right: var(--removed-body-scroll-bar-size, 0);
     z-index: 50;
   }
 }
