--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,6 +5,7 @@
 @import 'search';
 @import 'home';
 @import 'ProductCard';
+@import 'buy-in-click';
 @import 'modals';
 
 @import 'contacts';
@@ -54,6 +55,10 @@ body {
   box-sizing: content-box;
 }
 
+.uppercase {
+  text-transform: uppercase;
+}
+
 .sprite-icon {
   display: inline-block;
   max-width: 100%;
@@ -78,6 +83,63 @@ body {
   @include --hover {
     background: #eed20e;
     color: #000;
+  }
+}
+
+.button-secondary {
+  background: #0090b3;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  height: 44px;
+  padding: 0 24px;
+  border-radius: 4px;
+  border: none;
+  box-sizing: border-box;
+  cursor: pointer;
+  font-size: 16px;
+  transition: filter 0.3s ease;
+  @include --hover {
+    background: linear-gradient(37deg, #ffed66 0%, #ffde2c 100%);
+    color: #000;
+    filter: drop-shadow(-0.696px 4.951px 5px rgba(6, 56, 63, 0.28));
+  }
+}
+
+.button-secondary__arrow {
+  width: 6px;
+  height: 6px;
+  position: relative;
+  display: inline-block;
+  &::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 50%;
+    margin-top: -1px;
+    height: 2px;
+    background: currentColor;
+    width: 6px;
+  }
+  &::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 50%;
+    margin-top: -3px;
+    height: 4px;
+    width: 4px;
+    border-right: 2px solid currentColor;
+    border-bottom: 2px solid currentColor;
+    transform: rotate(-45deg);
+  }
+  .button-secondary:hover &::before {
+    width: 10px;
+  }
+  .button-secondary:hover &::after {
+    left: 4px;
   }
 }
 
@@ -120,6 +182,59 @@ body {
     background: #f4f4f4;
     color: #000;
   }
+}
+
+.labeled-input {
+  position: relative;
+  display: block;
+}
+
+.labeled-input__control {
+  display: block;
+  width: 100%;
+  border-radius: 8px;
+  background-color: #ffffff;
+  border: 1px solid #e3e3e3;
+  height: 52px;
+  padding-left: 12px;
+  padding-right: 12px;
+  padding-top: 16px;
+  font-size: 16px;
+  line-height: 24px;
+  color: #202020;
+  line-height: 1;
+  box-sizing: border-box;
+}
+
+.labeled-input__label {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  gap: 2px;
+  left: 12px;
+  top: 12px;
+  line-height: 1;
+  font-size: 12px;
+  text-transform: uppercase;
+  color: #999999;
+  font-family: var(--font-sans-narrow);
+  transition: 0.3s ease;
+}
+
+.labeled-input__label::after {
+  content: '*';
+  display: none;
+  color: #ff0000;
+}
+
+.labeled-input:has(.labeled-input__control:not(:placeholder-shown)) .labeled-input__label,
+.labeled-input:has(.labeled-input__control:focus) .label {
+  font-size: 11px;
+  top: 8px;
+}
+
+.labeled-input:has(.labeled-input__control[required]) .labeled-input__label::after {
+  display: block;
 }
 
 //* -- - - -- -- - - - *//
