--- a/src/scss/modals.scss
+++ b/src/scss/modals.scss
@@ -26,6 +26,25 @@
   width: 640px;
 }
 
+.modal-buy-in-click .modal__container {
+  width: 960px;
+
+  @include --max-md {
+    width: 384px;
+  }
+}
+
+.modal-buy-in-click .modal__content {
+  padding: 120px;
+
+  @include --max-lg {
+    padding: 64px;
+  }
+  @include --max-md {
+    padding: 24px;
+  }
+}
+
 .modal__overlay {
   will-change: transform;
   position: fixed;
