--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,4 +1,6 @@
 @import 'variables';
+@import 'common';
+@import 'filter';
 @import 'header';
 @import 'footer';
 @import 'floating-nav';
@@ -7,6 +9,7 @@
 @import 'ProductCard';
 @import 'buy-in-click';
 @import 'modals';
+@import 'category';
 
 @import 'contacts';
 
@@ -33,208 +36,6 @@
     --container-padding: 12px;
     --container-width: calc(100vw - (var(--container-padding) * 2));
   }
-}
-
-body {
-  font-family: 'Rubik', serif;
-  font-size: 14px;
-  line-height: 1.8;
-  background: white;
-
-  .jGrowl.top-right {
-    margin-right: var(--removed-body-scroll-bar-size, 0);
-  }
-}
-
-.container {
-  width: var(--container-width);
-  max-width: calc(100% - calc(var(--container-padding) * 2));
-  padding: 0 var(--container-padding);
-  margin-left: auto;
-  margin-right: auto;
-  box-sizing: content-box;
-}
-
-.uppercase {
-  text-transform: uppercase;
-}
-
-.sprite-icon {
-  display: inline-block;
-  max-width: 100%;
-  height: auto;
-  flex-shrink: 0;
-}
-
-.button-primary {
-  background: #efde00;
-  color: #383838;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 4px;
-  height: 44px;
-  padding: 0 24px;
-  border-radius: 4px;
-  border: none;
-  box-sizing: border-box;
-  cursor: pointer;
-  font-size: 16px;
-  @include --hover {
-    background: #eed20e;
-    color: #000;
-  }
-}
-
-.button-secondary {
-  background: #0090b3;
-  color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 8px;
-  height: 44px;
-  padding: 0 24px;
-  border-radius: 4px;
-  border: none;
-  box-sizing: border-box;
-  cursor: pointer;
-  font-size: 16px;
-  transition: filter 0.3s ease;
-  @include --hover {
-    background: linear-gradient(37deg, #ffed66 0%, #ffde2c 100%);
-    color: #000;
-    filter: drop-shadow(-0.696px 4.951px 5px rgba(6, 56, 63, 0.28));
-  }
-}
-
-.button-secondary__arrow {
-  width: 6px;
-  height: 6px;
-  position: relative;
-  display: inline-block;
-  &::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 50%;
-    margin-top: -1px;
-    height: 2px;
-    background: currentColor;
-    width: 6px;
-  }
-  &::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 50%;
-    margin-top: -3px;
-    height: 4px;
-    width: 4px;
-    border-right: 2px solid currentColor;
-    border-bottom: 2px solid currentColor;
-    transform: rotate(-45deg);
-  }
-  .button-secondary:hover &::before {
-    width: 10px;
-  }
-  .button-secondary:hover &::after {
-    left: 4px;
-  }
-}
-
-.button-outline {
-  background: transparent;
-  border: 2px solid #e3e3e3;
-  color: #333;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 4px;
-  text-decoration: none;
-  height: 44px;
-  padding: 0 24px;
-  border-radius: 4px;
-  box-sizing: border-box;
-  cursor: pointer;
-  font-size: 16px;
-  @include --hover {
-    background: #e3e3e3;
-    color: #000;
-  }
-}
-
-.button-link {
-  background: transparent;
-  color: #383838;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 4px;
-  height: 44px;
-  padding: 0 24px;
-  border-radius: 4px;
-  border: none;
-  box-sizing: border-box;
-  cursor: pointer;
-  font-size: 16px;
-  @include --hover {
-    background: #f4f4f4;
-    color: #000;
-  }
-}
-
-.labeled-input {
-  position: relative;
-  display: block;
-}
-
-.labeled-input__control {
-  display: block;
-  width: 100%;
-  border-radius: 8px;
-  background-color: #ffffff;
-  border: 1px solid #e3e3e3;
-  height: 52px;
-  padding-left: 12px;
-  padding-right: 12px;
-  padding-top: 16px;
-  font-size: 16px;
-  line-height: 24px;
-  color: #202020;
-  line-height: 1;
-  box-sizing: border-box;
-}
-
-.labeled-input__label {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  gap: 2px;
-  left: 12px;
-  top: 12px;
-  line-height: 1;
-  font-size: 12px;
-  text-transform: uppercase;
-  color: #999999;
-  font-family: var(--font-sans-narrow);
-  transition: 0.3s ease;
-}
-
-.labeled-input__label::after {
-  content: '*';
-  display: none;
-  color: #ff0000;
-}
-
-.labeled-input:has(.labeled-input__control:not(:placeholder-shown)) .labeled-input__label,
-.labeled-input:has(.labeled-input__control:focus) .label {
-  font-size: 11px;
-  top: 8px;
-}
-
-.labeled-input:has(.labeled-input__control[required]) .labeled-input__label::after {
-  display: block;
 }
 
 //* -- - - -- -- - - - *//
@@ -8319,197 +8120,6 @@ textarea.order-control {
 .msCart__nodata {
   text-align: center;
   font-size: 19px;
-}
-
-.filters {
-  display: grid;
-  column-gap: 20px;
-  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-  @media (max-width: $breakpoint-mini-max) {
-    display: none;
-  }
-}
-
-.filters-wrap {
-  // background-color: #ffffff;
-  // border-bottom: 1px solid transparent;
-  // z-index: 200 !important;
-  .button-blue {
-    width: 100%;
-  }
-}
-
-.filters-sticky {
-  z-index: 200;
-  background: #ffffff;
-  @media (max-width: $breakpoint-mini-max) {
-    padding-top: 5px;
-    padding-bottom: 5px;
-  }
-}
-
-.filters-sticky_fixed {
-  position: fixed;
-}
-
-// .filters-wrap.filters-wrap_fixed {
-//   position: fixed;
-//   top: 60px;
-//   border-bottom-color: #ccc;
-//   @media (max-width: $breakpoint-medium-max) {
-//     top: 80px;
-//   }
-//   .filters-wrap__toggle {
-//     display: block;
-//   }
-// }
-
-// .filters-wrap.filters-wrap_hidden {
-//   transform: translateY(-100%);
-//   .filters-wrap__toggle span:first-child {
-//     display: none;
-//   }
-//   .filters-wrap__toggle span:last-child {
-//     display: inline;
-//   }
-// }
-
-// .filters-wrap.filters-wrap_fixed.filters-wrap_hidden {
-//   transform: translateY(-100%);
-// }
-
-.filters-wrap_on-mobile-visible {
-  //   @media (max-width: $breakpoint-mini-max) {
-  //     .filters {
-  //       display: grid;
-  //     }
-  .filters-wrap__toggle-on-moblie {
-    margin-top: 20px;
-    &::after {
-      top: 14px;
-      transform: rotate(126deg) skewY(22deg);
-    }
-  }
-  //   }
-}
-
-// .filters-wrap.filters-wrap_fixed {
-//   @media (max-width: $breakpoint-mini-max) {
-//     .filters {
-//       display: grid;
-//     }
-//     .filters-wrap__toggle-on-moblie {
-//       display: none;
-//     }
-//   }
-// }
-
-.filters-wrap__toggle {
-  position: absolute;
-  top: 100%;
-  right: 10px;
-  line-height: 28px;
-  border-radius: 0 0 10px 10px;
-  padding: 0 20px;
-  background-color: #fff;
-  color: #236ba6;
-  text-decoration: underline;
-  box-shadow: 0 1px 5px rgba(6, 61, 90, 0.8);
-  border: none;
-  cursor: pointer;
-  display: none;
-  &:focus {
-    outline: none;
-  }
-  &:hover {
-    background-color: #f1f1f1;
-  }
-  span {
-    &:first-child {
-      display: inline;
-    }
-    &:last-child {
-      display: none;
-    }
-  }
-  @media (max-width: $breakpoint-mini-max) {
-    width: 100%;
-    right: 0;
-  }
-}
-
-.filters-wrap__toggle-on-moblie {
-  background-color: #01718f;
-  color: #fff;
-  display: none;
-  width: 100%;
-  border: none;
-  text-align: left;
-  padding: 0 15px;
-  text-transform: uppercase;
-  font-size: 14px;
-  line-height: 34px;
-  border-radius: 0;
-  // margin-top: 20px;
-  position: relative;
-  text-align: center;
-  &::after {
-    content: '';
-    width: 12px;
-    height: 12px;
-    border-bottom: 2px solid #fff;
-    border-left: 2px solid #fff;
-    right: 15px;
-    position: absolute;
-    top: 7px;
-    transform: rotate(-54deg) skewY(22deg);
-  }
-  // .filters-wrap_fixed & {
-  //   display: none;
-  // }
-  // .filters-wrap_hidden & {
-  //   margin-top: 0;
-  // }
-  // .filters-wrap_hidden &::after {
-  //   top: 7px;
-  //   transform: rotate(-54deg) skewY(22deg);
-  // }
-  @media (max-width: $breakpoint-mini-max) {
-    display: block;
-  }
-}
-
-.filter-select {
-  display: block;
-  margin: 0;
-  padding: 5px 0;
-  border: none;
-  flex-grow: 1;
-  box-sizing: border-box;
-}
-
-.filter-select__title {
-  color: #676461;
-  font-size: 13px;
-  display: block;
-  white-space: nowrap;
-  line-height: 1;
-  margin-bottom: 4px;
-  @media (max-width: $breakpoint-mini-max) {
-    margin-bottom: 2px;
-  }
-}
-
-.filter-select__input {
-  border-radius: 3px;
-  border: 1px solid #b8b8b8;
-  background-color: #e8e8e8;
-  padding: 0 6px;
-  height: 28px;
-  box-sizing: border-box;
-  width: 100%;
-  color: #454544;
-  font-size: 12px;
 }
 
 .modal-buyoneclick {
