--- a/src/scss/ProductCard.scss
+++ b/src/scss/ProductCard.scss
@@ -7,7 +7,7 @@
   width: 100%;
   box-sizing: border-box;
 
-  @include --max-lg {
+  @include --max-xl {
     padding: 6px;
   }
   @include --max-md {
@@ -23,22 +23,29 @@
   background-color: rgb(255, 255, 255);
   box-shadow: 0px 0px 5px rgba(4, 2, 24, 0.13);
   position: absolute;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
+  // left: 0;
+  // top: 0;
+  // right: 0;
+  // bottom: 0;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
   z-index: -1;
   transition: 0.3s ease;
-  will-change: transform;
+  will-change: transform, height, width;
 
-  @include --max-lg {
+  @include --max-xl {
     border-radius: 4px;
   }
 }
 
 @media (hover: hover) {
   .product-card:hover::before {
-    transform: scale(1.06, 1.05);
+    // transform: scale(1.06, 1.05);
+    width: calc(100% + 20px);
+    height: calc(100% + 20px);
   }
 }
 
@@ -53,7 +60,7 @@
   flex-direction: column;
   gap: 3px;
 
-  @include --max-lg {
+  @include --max-xl {
     gap: 2px;
     left: 6px;
     top: 6px;
@@ -92,6 +99,44 @@
 }
 
 .product-card__availability {
+  position: absolute;
+  width: 69px;
+  height: 82px;
+  overflow: hidden;
+  left: 0;
+  top: 0;
+  border-radius: 10px 0 0 0;
+  transition: 0.3s ease;
+  will-change: left, top;
+  span {
+    position: absolute;
+    z-index: 20;
+    color: #fff;
+    font-size: 14px;
+    line-height: 1;
+    top: 40px;
+    left: 0;
+    text-align: center;
+    display: block;
+    transform-origin: left;
+    transform: rotate(-50deg);
+  }
+  &::after {
+    content: '';
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 10;
+    width: 0;
+    height: 0;
+    border-top: 82px solid #e65100;
+    border-right: 69px solid transparent;
+  }
+  .product-card:hover & {
+    left: -10px;
+    top: -10px;
+  }
 }
 
 .product-card__actions {
@@ -101,7 +146,7 @@
   display: flex;
   flex-direction: column;
 
-  @include --max-lg {
+  @include --max-xl {
     right: 2px;
     top: 2px;
   }
@@ -129,7 +174,7 @@
     color: #f28316;
   }
 
-  @include --max-lg {
+  @include --max-xl {
     width: 28px;
     height: 28px;
   }
@@ -140,7 +185,7 @@
   color: rgb(0, 0, 0);
   font-weight: bold;
   line-height: 1;
-  @include --max-lg {
+  @include --max-xl {
     font-size: 14px;
   }
 }
@@ -148,7 +193,7 @@
 .product-card__content {
   margin-top: 12px;
   flex-grow: 1;
-  @include --max-lg {
+  @include --max-xl {
     margin-top: 8px;
   }
 }
@@ -162,7 +207,7 @@
   @include --hover {
     color: #f18a16;
   }
-  @include --max-lg {
+  @include --max-xl {
     font-size: 12px;
     line-height: 1.15;
   }
@@ -174,7 +219,7 @@
   gap: 10px;
   grid-template-columns: 44px 72px 1fr;
 
-  @include --max-lg {
+  @include --max-xl {
     gap: 6px;
     grid-template-columns: 30px 44px 1fr;
     margin-top: 8px;
@@ -203,7 +248,7 @@
     background: #e8e8e8;
     color: #686868;
   }
-  @include --max-lg {
+  @include --max-xl {
     height: 30px;
     width: 30px;
     svg {
@@ -227,6 +272,7 @@
   box-sizing: border-box;
   cursor: pointer;
   font-size: 16px;
+  white-space: nowrap;
   .product-card[data-product-card-status='added'] & {
     display: none;
   }
@@ -234,7 +280,7 @@
     background: #eed20e;
     color: #000;
   }
-  @include --max-lg {
+  @include --max-xl {
     font-size: 12px;
     height: 30px;
     gap: 2px;
@@ -269,13 +315,14 @@
   @include --hover {
     background: #0283a2;
   }
-  @include --max-lg {
+  @include --max-xl {
     font-size: 12px;
     height: 30px;
     gap: 2px;
     svg {
       width: 14px;
       height: 14px;
+      margin-top: -1px;
     }
   }
   @include --max-md {
@@ -289,7 +336,7 @@
   flex-shrink: 0;
   width: 72px;
   height: 44px;
-  @include --max-lg {
+  @include --max-xl {
     width: 44px;
     height: 30px;
   }
@@ -318,7 +365,7 @@
     outline: none;
     border-color: #000;
   }
-  @include --max-lg {
+  @include --max-xl {
     font-size: 12px;
     padding-right: 16px;
     padding-left: 4px;
@@ -346,7 +393,7 @@
     color: #000;
     background: #e8e8e8;
   }
-  @include --max-lg {
+  @include --max-xl {
     width: 12px;
     font-size: 16px;
   }
@@ -376,7 +423,7 @@
     height: auto;
     display: block;
   }
-  @include --max-lg {
+  @include --max-xl {
     width: 180px;
     height: 180px;
   }
@@ -394,7 +441,7 @@
   transform-style: preserve-3d;
   transition: 0.3s linear;
 
-  @include --max-lg {
+  @include --max-xl {
     width: 180px;
     height: 180px;
   }
