--- a/src/scss/ProductCard.scss
+++ b/src/scss/ProductCard.scss
@@ -10,11 +10,6 @@
   @include --max-xl {
     padding: 6px;
   }
-  @include --max-md {
-    .button-buyoneclick {
-      display: none;
-    }
-  }
 }
 
 .product-card::before {
@@ -173,7 +168,6 @@
   @include --hover {
     color: #f28316;
   }
-
   @include --max-xl {
     width: 28px;
     height: 28px;
@@ -236,24 +230,32 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 44px;
-  width: 44px;
+  height: 48px;
+  width: 48px;
   border-radius: 4px;
   border: 1px solid #e3e3e3;
   box-sizing: border-box;
   flex-shrink: 0;
+  padding: 0;
   cursor: pointer;
   font-size: 16px;
   @include --hover {
     background: #e8e8e8;
     color: #686868;
   }
-  @include --max-xl {
-    height: 30px;
-    width: 30px;
-    svg {
-      width: 14px;
-      height: 14px;
+  @include --max-md {
+    display: none;
+  }
+  .product-card & {
+    height: 44px;
+    width: 44px;
+    @include --max-xl {
+      height: 30px;
+      width: 30px;
+      svg {
+        width: 14px;
+        height: 14px;
+      }
     }
   }
 }
@@ -264,34 +266,45 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 4px;
-  height: 44px;
-  padding: 0 12px;
-  border-radius: 4px;
+  gap: 8px;
+  height: 52px;
+  padding: 0 24px;
+  border-radius: 12px;
+  text-transform: uppercase;
   border: none;
   box-sizing: border-box;
   cursor: pointer;
   font-size: 16px;
   white-space: nowrap;
-  .product-card[data-product-card-status='added'] & {
+  [data-product][data-product-status='added'] & {
     display: none;
+  }
+  svg {
+    margin-top: -2px;
   }
   @include --hover {
     background: #eed20e;
     color: #000;
   }
-  @include --max-xl {
-    font-size: 12px;
-    height: 30px;
-    gap: 2px;
-    svg {
-      width: 14px;
-      height: 14px;
+  .product-card & {
+    gap: 4px;
+    padding: 0 12px;
+    border-radius: 4px;
+    height: 44px;
+    text-transform: initial;
+    @include --max-xl {
+      font-size: 12px;
+      height: 30px;
+      gap: 2px;
+      svg {
+        width: 14px;
+        height: 14px;
+      }
     }
-  }
-  @include --max-md {
-    padding-left: 4px;
-    padding-right: 4px;
+    @include --max-md {
+      padding-left: 4px;
+      padding-right: 4px;
+    }
   }
 }
 
@@ -301,44 +314,58 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 4px;
-  height: 44px;
-  padding: 0 12px;
-  border-radius: 4px;
+  gap: 8px;
+  height: 52px;
+  padding: 0 24px;
+  border-radius: 12px;
   border: none;
   box-sizing: border-box;
+  text-transform: uppercase;
   cursor: pointer;
   font-size: 16px;
-  .product-card:not([data-product-card-status='added']) & {
+  [data-product]:not([data-product-status='added']) & {
     display: none;
+  }
+  svg {
+    margin-top: -2px;
   }
   @include --hover {
     background: #0283a2;
   }
-  @include --max-xl {
-    font-size: 12px;
-    height: 30px;
-    gap: 2px;
-    svg {
-      width: 14px;
-      height: 14px;
-      margin-top: -1px;
+  .product-card & {
+    gap: 4px;
+    padding: 0 12px;
+    border-radius: 4px;
+    height: 44px;
+    text-transform: initial;
+    @include --max-xl {
+      font-size: 12px;
+      height: 30px;
+      gap: 2px;
+      svg {
+        width: 14px;
+        height: 14px;
+      }
     }
-  }
-  @include --max-md {
-    padding-left: 4px;
-    padding-right: 4px;
+    @include --max-md {
+      padding-left: 4px;
+      padding-right: 4px;
+    }
   }
 }
 
 .quantity {
   position: relative;
   flex-shrink: 0;
-  width: 72px;
-  height: 44px;
-  @include --max-xl {
-    width: 44px;
-    height: 30px;
+  width: 95px;
+  height: 48px;
+  .product-card & {
+    width: 72px;
+    height: 44px;
+    @include --max-xl {
+      width: 44px;
+      height: 30px;
+    }
   }
 }
 
@@ -350,11 +377,11 @@
   width: 100%;
   height: 100%;
   min-width: 0;
-  padding-left: 6px;
-  padding-right: 36px;
+  padding-left: 12px;
+  padding-right: 52px;
   font-weight: bold;
   text-align: center;
-  font-size: 14px;
+  font-size: 16px;
   background: #fff;
   -moz-appearance: textfield;
   &::-webkit-outer-spin-button,
@@ -365,10 +392,15 @@
     outline: none;
     border-color: #000;
   }
-  @include --max-xl {
-    font-size: 12px;
-    padding-right: 16px;
-    padding-left: 4px;
+  .product-card & {
+    font-size: 14px;
+    padding-left: 6px;
+    padding-right: 36px;
+    @include --max-xl {
+      font-size: 12px;
+      padding-right: 16px;
+      padding-left: 4px;
+    }
   }
 }
 
@@ -383,7 +415,7 @@
   justify-content: center;
   color: #9c9c9c;
   font-size: 18px;
-  width: 30px;
+  width: 40px;
   height: 50%;
   border: none;
   cursor: pointer;
@@ -393,9 +425,12 @@
     color: #000;
     background: #e8e8e8;
   }
-  @include --max-xl {
-    width: 12px;
-    font-size: 16px;
+  .product-card & {
+    width: 30px;
+    @include --max-xl {
+      width: 12px;
+      font-size: 16px;
+    }
   }
 }
 
