--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -33,3 +33,523 @@
 .product-layout__gallery {
   grid-area: gallery;
 }
+
+.product-media {
+  position: sticky;
+  top: 81px;
+}
+
+.product-gallery {
+  position: relative;
+  z-index: 1;
+}
+
+.product-gallery__close {
+  display: none;
+}
+
+.product-gallery__main {
+  --swiper-navigation-size: 46px;
+  --swiper-navigation-sides-offset: 20px;
+
+  min-height: 0;
+  min-width: 0;
+  position: relative;
+  overflow: hidden;
+  background: #f4f4f4;
+  border: 4px solid #f4f4f4;
+  box-sizing: border-box;
+
+  .swiper-button-prev,
+  .swiper-button-next {
+    width: var(--swiper-navigation-size);
+    border-radius: 50%;
+    box-shadow: 0px 0px 9px 0px rgba(0, 25, 41, 0.08);
+    background-color: rgba(0, 0, 0, 0.2);
+    filter: none;
+    color: #fff;
+    transition: 0.3s ease;
+    &:hover {
+      filter: none;
+      box-shadow: 1px 8px 9px 0px rgba(0, 25, 41, 0.15);
+      background-color: rgba(0, 0, 0, 0.3);
+    }
+    &::after {
+      font-size: calc(var(--swiper-navigation-size) / 2);
+    }
+  }
+  .swiper-slide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    img {
+      display: block;
+      max-width: 100%;
+      max-height: 480px;
+      width: auto;
+      height: auto;
+      user-select: none;
+    }
+  }
+
+  @include --max-md {
+    --swiper-navigation-size: 32px;
+    --swiper-navigation-top-offset: 86px;
+
+    .swiper-button-prev,
+    .swiper-button-next {
+      color: #616161;
+      background-color: rgba(255, 255, 255, 0.5);
+      &:hover {
+        background: #fff;
+      }
+    }
+  }
+}
+
+.product-gallery__thumbs {
+  min-height: 0;
+  min-width: 0;
+  position: relative;
+  overflow: hidden;
+  margin-top: 12px;
+  .swiper-slide {
+    border: 1px solid #e3e3e3;
+    box-sizing: border-box;
+    img {
+      display: block;
+      max-width: 100%;
+      max-height: 140px;
+      width: auto;
+      height: auto;
+      user-select: none;
+      opacity: 0.6;
+    }
+  }
+  .swiper-slide:hover {
+    img {
+      opacity: 1;
+    }
+  }
+  .swiper-slide-thumb-active {
+    border-color: #0599bb;
+    box-shadow: inset 0 0 0 1px #0599bb;
+    img {
+      opacity: 1;
+    }
+  }
+}
+
+.product-flags {
+  position: absolute;
+  z-index: 2;
+  left: 12px;
+  top: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
+
+  @include --max-xl {
+    gap: 2px;
+    left: 6px;
+    top: 6px;
+  }
+}
+
+.product-flags__item {
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: bold;
+  border-width: 2px;
+  border-style: solid;
+  height: 22px;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 1;
+  text-align: center;
+  width: 42px;
+  border-radius: 4px;
+  &_new {
+    color: #000;
+    background-color: #5fd7f6;
+    border-color: #5fd7f6;
+  }
+  &_popular {
+    color: #f18a16;
+    background-color: #fff;
+    border-color: #f18a16;
+  }
+  &_sale {
+    color: #fff;
+    background-color: #fe0000;
+    border-color: #fe0000;
+  }
+}
+
+.product-availability {
+  position: absolute;
+  width: 69px;
+  height: 82px;
+  overflow: hidden;
+  left: 0;
+  top: 0;
+  border-radius: 10px 0 0 0;
+  transition: 0.3s ease;
+  will-change: left, top;
+  span {
+    position: absolute;
+    z-index: 20;
+    color: #fff;
+    font-size: 14px;
+    line-height: 1;
+    top: 40px;
+    left: 0;
+    text-align: center;
+    display: block;
+    transform-origin: left;
+    transform: rotate(-50deg);
+  }
+  &::after {
+    content: '';
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 10;
+    width: 0;
+    height: 0;
+    border-top: 82px solid #e65100;
+    border-right: 69px solid transparent;
+  }
+  .product-card:hover & {
+    left: -10px;
+    top: -10px;
+  }
+}
+
+.product-back {
+  font-size: 16px;
+  line-height: 1;
+  color: #585858;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  position: relative;
+  border: none;
+  background: transparent;
+  padding: 0 16px;
+  margin: 0 -16px;
+  cursor: pointer;
+  background-color: #fff;
+  border: 1px solid transparent;
+  border-radius: 16px;
+  &:hover {
+    filter: drop-shadow(0 0 2.5px rgba(0, 25, 41, 0.08));
+    border-color: #e2e2df;
+  }
+  svg {
+    margin-left: -6px;
+    margin-right: 6px;
+  }
+}
+
+.product-title {
+  font-size: 30px;
+  text-transform: uppercase;
+  color: #000000;
+  line-height: 1;
+  font-weight: normal;
+  margin: 0;
+}
+
+.product-rating {
+}
+
+.product-rating__stars {
+  --size: 20px;
+
+  width: calc(var(--size) * 5);
+  height: var(--size);
+  background: url('../images/star-gray.svg') repeat 0 0;
+  background-size: var(--size) var(--size);
+}
+
+.product-rating__stars-fill {
+  height: var(--size);
+  background: url('../images/star.svg') repeat 0 0;
+  background-size: var(--size) var(--size);
+}
+
+.product-meta {
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  grid-template-rows: auto 12px auto;
+  grid-auto-columns: 1fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  align-items: center;
+  grid-template-areas:
+    'rating . share'
+    'rating . share'
+    'rating . share';
+  &:has(.product-meta__article) {
+    grid-template-areas:
+      'article . share'
+      '. . .'
+      'rating . .';
+  }
+}
+
+.product-meta__article {
+  grid-area: article;
+  font-size: 14px;
+  color: #acacbc;
+  line-height: 1;
+}
+
+.product-meta__rating {
+  grid-area: rating;
+}
+
+.product-meta__share {
+  grid-area: share;
+  display: flex;
+  gap: 12px;
+  align-items: center;
+}
+
+.product-share {
+  position: relative;
+  z-index: 1;
+  &:has(*:focus),
+  &:hover {
+    .product-share__title {
+      color: #000;
+    }
+    .product-share__body {
+      opacity: 1;
+      visibility: visible;
+    }
+  }
+  .ya-share2__container_size_m .ya-share2__badge .ya-share2__icon {
+    height: 32px;
+    width: 32px;
+    background-size: 32px 32px;
+  }
+}
+
+.product-share__title {
+  position: relative;
+  z-index: 2;
+  font-size: 12px;
+  line-height: 18px;
+  color: #8d8d8d;
+  display: flex;
+  gap: 4px;
+  height: 32px;
+  padding: 0 6px;
+  align-items: center;
+  cursor: pointer;
+  border: none;
+  background: transparent;
+  span {
+    border-bottom: 1px dashed currentColor;
+    display: inline-block;
+  }
+}
+
+.product-share__body {
+  z-index: 1;
+  position: absolute;
+  right: -6px;
+  top: 0;
+  padding: 42px 12px 12px;
+  background: #e2f3f7;
+  width: 212px;
+  border-radius: 8px;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s ease;
+}
+
+.product-actions {
+  display: flex;
+  position: relative;
+  z-index: 1;
+  gap: 12px;
+  button {
+    border: none;
+    background: transparent;
+    color: #8d8d8d;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    padding: 0;
+    svg {
+      width: 20px;
+      height: 20px;
+    }
+    &[data-msfavorites-state='active'] {
+      color: #0699bc;
+    }
+    &[data-mscomparison-state='active'] {
+      color: #0699bc;
+    }
+    @include --hover {
+      color: #f28316;
+    }
+  }
+}
+
+.product-rating {
+  display: flex;
+  gap: 24px;
+  align-items: center;
+}
+
+.product-rating__reviews {
+  display: inline-block;
+  font-size: 12px;
+  line-height: 18px;
+  color: #9e9e9e;
+  text-decoration: none;
+  border-bottom: 1px dashed currentColor;
+  &:hover {
+    color: #000;
+  }
+}
+
+.product-pricing {
+  display: grid;
+  align-items: center;
+  grid-template-columns: auto 1fr auto 4fr;
+  grid-template-rows: auto 12px auto;
+  grid-auto-columns: 1fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  grid-template-areas:
+    'price . mrc .'
+    '. . . .'
+    'remains . . .';
+}
+
+.product-pricing__price {
+  grid-area: price;
+}
+
+.product-pricing__mrc {
+  grid-area: mrc;
+}
+
+.product-pricing__remains {
+  grid-area: remains;
+}
+
+.product-price {
+  display: flex;
+  align-items: baseline;
+  gap: 12px;
+}
+
+.product-price__label {
+  font-size: 14px;
+  color: #9c9c9c;
+  line-height: 1;
+}
+
+.product-price__value {
+  font-size: 24px;
+  color: #000000;
+  font-weight: 700;
+  line-height: 1;
+}
+
+.product-mrc {
+  display: flex;
+  align-items: baseline;
+  gap: 4px;
+}
+
+.product-mrc__label {
+  font-size: 16px;
+  color: #9c9c9c;
+  line-height: 1;
+}
+
+.product-mrc__value {
+  font-size: 16px;
+  line-height: 1;
+  color: #9c9c9c;
+  text-decoration: line-through;
+}
+
+.product-remains {
+  display: flex;
+  align-items: baseline;
+  gap: 12px;
+}
+
+.product-remains__label {
+  font-size: 14px;
+  color: #9c9c9c;
+  line-height: 1;
+}
+
+.product-remains__value {
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #37bc21;
+  line-height: 1;
+}
+
+.product-cheaper {
+  font-size: 16px;
+  text-transform: uppercase;
+  color: #a1a0a0;
+  text-align: center;
+  height: 46px;
+  border-radius: 12px;
+  background: #f8f8f8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  border: 0;
+  cursor: pointer;
+  padding: 0;
+  margin-top: 54px;
+  &:hover {
+    background: #f3f3f3;
+    color: #000;
+  }
+}
+
+.product-options {
+  margin-top: 24px;
+}
+
+.product-form {
+  margin-top: 24px;
+}
+
+.product-controls {
+  margin-top: 24px;
+  align-items: center;
+  display: grid;
+  gap: 16px;
+  grid-template-columns: 48px 95px 1fr;
+}
+
+.product-intro {
+  margin-top: 24px;
+  font-size: 14px;
+  line-height: 24px;
+  color: #000;
+}
